--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:digits="01234567890"
+        android:maxLength="7"
+        android:hint="@string/hint_words"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
